--- a/frontend/templates/champions_page.html
+++ b/frontend/templates/champions_page.html
@@ -513,7 +513,7 @@
                     ${champion.region ? `<div class="attribute"><i class="fas fa-globe-americas"></i> ${champion.region}</div>` : ''}
                     ${champion.release_year ? `<div class="attribute"><i class="fas fa-calendar-alt"></i> ${champion.release_year}</div>` : ''}
                 </div>
-                <button class="btn-view-details" data-id="${champion.id}">View Details</button>
+                <button class="btn-view-details" data-id="${champion.id}">{% trans "View Details" %}</button>
             </div>
         `;
 
