--- a/frontend/templates/champions_page.html
+++ b/frontend/templates/champions_page.html
@@ -121,7 +121,7 @@
     <!-- SORTING CONTROLS -->
     <div class="sorting-container">
         <div class="champion-count">
-            <span id="champion-count-display">{% trans 'Showing' %} <span id="showing-count">0</span> {% trans 'of' %} {{ champion_count }} {% trans 'champions' %}</span>
+            <span id="champion-count-display">{{ champion_count }} {% trans 'Champion' %}</span>
         </div>
         <div class="sorting-controls">
             <label for="sort-by">{% trans 'Sort by:' %}</label>
