--- a/frontend/templates/partial/base.html
+++ b/frontend/templates/partial/base.html
@@ -5,7 +5,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>{% block page_title %}LoL Wordle{% endblock %}</title>
+    <title>{% block page_title %}LoL Game{% endblock %} {{ title }}</title>
+    <meta name="description" content="{{ seo_desc }}">
+    {% block meta %}{% endblock %}
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Cinzel:wght@600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
